fabric/testdata/out/ing_sugarcane-put-api-commodity-groups-id-rl-service-stupssugarcaneperftest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e clusterClientRatelimit(\"sugarcane_api-commodity-groups-id_PUT_stups_sugarcane-perf-test\",
      2147483647, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/api/commodity-groups/:id\") \u0026\u0026 Method(\"PUT\") \u0026\u0026
      JWTPayloadAllKV(\"sub\", \"stups_sugarcane-perf-test\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"controller-uid":"034b420d-673b-11e9-8daa-02b5f12a6be8","deployment-id":"d-ccbr8yx3m7q8jqmamix8fuc5m","pipeline-id":"l-6yn1sv8ryxtz4pzezhuwwcjc8"},"name":"sugarcane-put-api-commodity-groups-id-rl-service-stupssugarcaneperftest","namespace":"default"},"spec":{"rules":[{"host":"sugarcane.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"sugarcane","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-commodity-group- [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> clusterClientRatelimit("sugarcane_api-commodity-groups-id_PUT_stups_sugarcane-perf-test",
      2147483647, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(4) && Path("/api/commodity-groups/:id")
      && Method("PUT") && JWTPayloadAllKV("sub", "stups_sugarcane-perf-test") && Header("X-Forwarded-Proto",
      "https")
  creationTimestamp: "2020-10-09T15:04:57Z"
  generation: 1
  labels:
    controller-uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
    deployment-id: d-ccbr8yx3m7q8jqmamix8fuc5m
    pipeline-id: l-6yn1sv8ryxtz4pzezhuwwcjc8
  name: sugarcane-put-api-commodity-groups-id-rl-service-stupssugarcaneperftest
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: sugarcane
    uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
  resourceVersion: "1370351714"
  uid: 66c92e8e-7dda-4a68-9e1c-fb056feb633a
spec:
  rules:
  - host: sugarcane.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-commodity-group-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
